docroot/themes/custom/emulsifymars/components/02-molecules/search/search-input/_search-input.scss
.search-input {
  position: relative;
  display: inline-block;

  .form-item {
    margin-bottom: 0;
  }

  &::before {
    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' fill='none' viewBox='0 0 20 20'%3E%3Cpath fill='%23490E00' d='M19.644 18.107l-4.098-4.098c.2-.267.4-.535.556-.824.067-.112.134-.245.2-.357.134-.244.246-.49.357-.757.268-.646.468-1.336.58-2.049.044-.29.066-.579.088-.868 0-.156.023-.29.023-.446C17.372 3.898 13.474 0 8.686 0c-.156 0-.29 0-.445.022-.29.023-.58.045-.87.09-.868.133-1.692.4-2.449.757-.245.111-.512.245-.735.378-.245.156-.468.312-.69.468-.446.334-.869.713-1.225 1.114-.09.11-.178.2-.268.311-.356.423-.668.891-.935 1.381C.379 5.768 0 7.194 0 8.686c0 .156 0 .29.022.445.023.29.045.58.09.869.11.713.311 1.403.578 2.049.335.78.78 1.492 1.292 2.138.09.111.178.223.267.312.38.4.78.78 1.225 1.114.223.155.446.311.69.467.246.156.49.29.736.401.757.356 1.581.624 2.45.757.29.045.579.067.868.09.156 0 .29.022.446.022 1.982 0 3.808-.669 5.278-1.782l4.098 4.098c.223.223.512.334.78.334.267 0 .579-.111.78-.334.49-.423.49-1.136.044-1.56zM1.782 8.686c0-3.808 3.096-6.904 6.904-6.904s6.904 3.096 6.904 6.904-3.096 6.904-6.904 6.904-6.904-3.096-6.904-6.904z'/%3E%3C/svg%3E%0A");
    position: absolute;
    left: 20px;
    bottom: 8px;

    @include xl {
      bottom: 13px;
    }
  }

  &__field {
    width: 335px;
    height: 50px;
    border: none;
    font-family: variable(secondary-font);
    font-size: 16px;
    line-height: 50px;
    color: clr(primary);
    border-radius: variable(button-border-radius);
    padding: 0 10px 0 50px;

    @include medium {
      width: 688px;
    }

    @include xl {
      width: 896px;
      height: 60px;
      font-size: 18px;
      line-height: 60px;
    }

    &:focus {
      outline: none;
    }

    &::placeholder {
      font-size: 16px;
      line-height: 50px;
      color: clr(primary);
      opacity: .6;

      @include xl {
        font-size: 18px;
        line-height: 60px;
      }
    }
  }

  &__suggestions {
    position: absolute;
    width: 100%;
    top: 100%;
    left: 0;
  }
}

.search-input-wrapper {
  font-size: 18px;
  line-height: 140%;
  color: clr(primary);

  .mars-search-autocomplete-suggestions-wrapper {
    display: none;
  }

  &.suggested {
    .search-input__field {
      border-bottom-left-radius: unset;
      border-bottom-right-radius: unset;
      width: 335px;

      @include medium {
        width: 688px;
      }

      @include xl {
        width: 896px;
      }
    }

    .autocomplete-border {
      border-bottom: 1px solid var(--c-subcolor-4);
      margin: 0 20px;
    }

    .mars-search-autocomplete-suggestions-wrapper {
      display: block;
      background: clr(subcolor-3);
      border-bottom-right-radius: variable(card-border-radius);
      border-bottom-left-radius: variable(card-border-radius);

      ul {
        margin: 0;
        list-style: none;

        li {
          padding: 10px 0;

          a {
            color: clr(primary);
            text-decoration: none;
          }
        }
      }

      .show-all, .no-results {
        margin: 0 20px;

        div {
          margin: 10px 0;
        }
        a {
          color: clr(primary);
          text-decoration: none;
        }
      }
    }
  }
}

